--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ fonttools==4.33.3
 gitdb==4.0.9
 GitPython==3.1.27
 idna==3.3
+imbalanced-learn==0.9.1
+imblearn==0.0
 importlib-metadata==4.12.0
 ipykernel==6.15.0
 ipython==8.4.0
@@ -33,6 +35,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.7.1
 jedi==0.18.1
 Jinja2==3.1.2
+joblib==1.1.0
 jsonschema==4.6.1
 jupyter-client==7.3.4
 jupyter-core==4.10.0
@@ -76,6 +79,7 @@ pytz-deprecation-shim==0.1.0.post0
 pyzmq==23.2.0
 requests==2.28.1
 rich==12.4.4
+scikit-learn==1.1.1
 scipy==1.8.1
 seaborn==0.11.2
 semver==2.13.0
@@ -86,6 +90,7 @@ soupsieve==2.3.2.post1
 stack-data==0.3.0
 streamlit==1.10.0
 terminado==0.15.0
+threadpoolctl==3.1.0
 tinycss2==1.1.1
 toml==0.10.2
 toolz==0.11.2
